# SlimeVR-Feeder-App

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  manifest.vrmanifest  vcpkg.json
.github/workflows/: build.yml
bindings/: actions.json  generic.json  generic_hmd.json  hands.json  head.json  holographic_controller.json  hpmotioncontroller.json  knuckles.json  manifest.vrmanifest  oculus_touch.json  vive_controller.json  vive_tracker_chest.json  vive_tracker_left_elbow.json  vive_tracker_left_foot.json  vive_tracker_left_knee.json  vive_tracker_left_shoulder.json  vive_tracker_right_elbow.json  vive_tracker_right_foot.json  vive_tracker_right_knee.json  vive_tracker_right_shoulder.json  vive_tracker_waist.json
cmake/: gitversion.cmake  version.h.in
rust_part/: CMakeLists.txt  Cargo.toml
rust_part/src/: lib.rs
src/: bridge.cpp  bridge.hpp  cxx_test.cpp  main.cpp  matrix_utils.cpp  matrix_utils.h  pathtools_excerpt.cpp  setup.cpp
